[gd_scene load_steps=3 format=3 uid="uid://bl4dhffn1xefl"]

[ext_resource type="Script" path="res://ui/editor/files_panel.gd" id="1_ls1se"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uqa0s"]
content_margin_right = 7.0
bg_color = Color(0.321569, 0.321569, 0.321569, 0.74902)
corner_radius_top_left = 14
corner_radius_bottom_left = 14
expand_margin_left = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[node name="FilesPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ls1se")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="FolderPanel" type="PanelContainer" parent="HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uqa0s")

[node name="VBox" type="VBoxContainer" parent="HBox/FolderPanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBox/FolderPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="FoldersVBox" type="VBoxContainer" parent="HBox/FolderPanel/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="HBox/FolderPanel/VBox"]
layout_mode = 2

[node name="NewFolderButton" type="Button" parent="HBox/FolderPanel/VBox"]
layout_mode = 2
text = "New folder"

[node name="VBoxContainer" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="FolderFiles" type="GridContainer" parent="HBox/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="HBox/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBox/VBoxContainer"]
layout_mode = 2

[node name="AddFileButton" type="Button" parent="HBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add file(s)"

[node name="AddCollorButton" type="Button" parent="HBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Color"

[connection signal="pressed" from="HBox/FolderPanel/VBox/NewFolderButton" to="." method="_on_new_folder_button_pressed"]
[connection signal="pressed" from="HBox/VBoxContainer/HBoxContainer/AddFileButton" to="." method="_on_add_file_button_pressed"]
